--- a/css/styles.css
+++ b/css/styles.css
@@ -84,7 +84,7 @@ p{
 }
 
 .icon{
-	color: #055160;
+	color: #FABA14;
 	margin-bottom: 1rem;
 }
 
@@ -96,7 +96,7 @@ p{
 
 #testimonials{
 	text-align: center;
-	background-color: #055160;
+	background-color: #DD3535;
 	color: #FFF;
 }
 
@@ -111,7 +111,7 @@ p{
 }
 
 #press{
-	background-color: #055160;
+	background-color: #FABA14;
 	text-align: center;
 	padding: 3%;
 }
@@ -122,7 +122,7 @@ p{
 }
 
 .carousel-inner{
-	background-color: #055160;
+	background-color: #DD3535;
 	text-align: center;
 	padding: 3%;
 }
@@ -131,8 +131,33 @@ p{
 #pricing{
 	padding: 100px;
 	text-align: center;
+	height: 10%
 }
 
 .pricing-column{
 	padding: 3% 3%;
+}
+
+/* CTA Section */
+#cta{
+	background-color: #DD3535;
+	color: #FFF;
+	text-align: center;
+	padding: 7% 15%;
+}
+
+.cta-heading{
+	font-weight: 800;
+	font-size: 3.5rem;
+	line-height: 1.5;
+}
+
+/* Footer Section */
+#footer{
+	padding: 7% 15%;
+	text-align: center;
+}
+
+.social-icon{
+	margin: 20px
 }
